--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
                                                             d="M17.5 11.6148C17.5 13.0531 16.3807 14.219 15 14.219C13.6193 14.219 12.5 13.0531 12.5 11.6148C12.5 10.1765 13.6193 9.01058 15 9.01058C16.3807 9.01058 17.5 10.1765 17.5 11.6148Z"
                                                             stroke="blue" stroke-width="2" />
                                                     </svg>
-                                                    <h5 class="text-black text-base font-normal leading-6 ml-5">Ceinture Bourguiba, Sfax 3000 Tunisia</h5>
+                                                    <h5 class="text-black text-base font-normal leading-6 ml-5">Sakiet Eddaier, Sfax 3011 Tunisia</h5>
                                                 </a>
                                             </div>
                                         </div>
@@ -188,8 +188,7 @@
                         <a href="contact@i-startup.tn" class="hover:text-white">contact@i-startup.tn</a>
                     </div>
                 </center>
-                
-    
+
                 <!-- Copyright text at the very bottom -->
                 <div class="w-full md:w-auto mb-4 md:mb-0">
                     <p class="text-center md:text-left">© 2024 I-StartUp. All rights reserved.</p>
