--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             </p>
                         </div>
                         <div class="md:w-1/2 w-full animate__animated animate__fadeInRight">
-                            <img src="meninsuite.gif" alt="Startup Journey" class="w-full h-auto rounded-lg shadow-xl transform transition-transform duration-300 ">
+                            <img src="Assets/meninsuite.gif" alt="Startup Journey" class="w-full h-auto rounded-lg shadow-xl transform transition-transform duration-300 ">
                         </div>
                     </div>
                 <br>
@@ -271,8 +271,8 @@
                         </dl>
                     </div>
                 </div>
-            </div>
-        </section> -->
+            </div> -->
+    </section>
 
     <footer class="bg-gray-900 text-gray-400 py-8">
         <div class="container mx-auto px-6">
