"Updated index.html: changed px-6 to px-4 in intro section, added closing div tag, and removed comment markers around closing div tags in two sections."

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <!-- Introduction Section -->
     <section id="intro" class="py-8 bg-white text-center">
-        <div class="container mx-auto px-6">
+        <div class="container mx-auto px-4">
             <div class="container mx-auto px-4 py-12">
                 <!-- Title and Mission Statement -->
                 <h2 class="text-4xl font-bold mb-4 animate__animated animate__fadeInUp">
@@ -243,6 +243,7 @@
                     <br><br><br><a href="services.html" class="bg-indigo-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 animate__animated animate__fadeInUp animate__delay-2s">Check Our Services</a>
                 </div>
               </div>
+            </div> -->
         </div>
         </section>
         <section style="background-color: #111827;margin-top: -100px;">
@@ -271,7 +272,7 @@
                         </dl>
                     </div>
                 </div>
-            </div> -->
+            </div>
     </section>
 
     <footer class="bg-gray-900 text-gray-400 py-8">
