"Updated track record section with new title, paragraphs, and statistics"

--- a/index.html
+++ b/index.html
@@ -253,21 +253,21 @@
                 </div>
                 <div class="lg:w-1/2 mt-6 lg:mt-0">
                     <div class="bg-white py-12 px-6 sm:py-16 sm:px-8 lg:px-10">
-                        <h2 class="text-3xl font-bold text-gray-900 mb-4">Our track record</h2>
-                        <p class="text-lg text-gray-600 mb-6">Trusted by thousands of creators worldwide</p>
-                        <p class="text-base text-gray-500 mb-8">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</p>
+                        <h2 class="text-3xl font-bold text-gray-900 mb-4">Current track record</h2>
+                        <p class="text-lg text-gray-600 mb-6">"We've Got it under control"</p>
+                        <p class="text-base text-gray-500 mb-8">Utilize our knowledge to your benefit providing it support and Advice to Initiatives that have the Potential to go to Market, Gain guidance from Active Entrepreneurs and more.</p>
                         <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center sm:grid-cols-2 lg:grid-cols-3">
                         <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                            <dt class="text-base leading-7 text-gray-600">Creators on the platform</dt>
-                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">8,000+</dd>
+                            <dt class="text-base leading-7 text-gray-600">Incubated Projects</dt>
+                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">3 completed</dd>
                         </div>
                         <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                            <dt class="text-base leading-7 text-gray-600">Flat platform fee</dt>
-                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">3%</dd>
+                            <dt class="text-base leading-7 text-gray-600">In The Wait-List</dt>
+                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">13 applicant</dd>
                         </div>
                         <div class="mx-auto flex max-w-xs flex-col gap-y-4">
-                            <dt class="text-base leading-7 text-gray-600">Uptime guarantee</dt>
-                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">99.9%</dd>
+                            <dt class="text-base leading-7 text-gray-600">In Business Success</dt>
+                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">49.9% increase</dd>
                         </div>
                         </dl>
                     </div>
