--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <section style="background-color: #111827;margin-top: -100px;">
             <div class="max-w-7xl mx-auto p-6 lg:flex lg:items-center">
                 <div class="lg:w-1/2">
-                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2850&q=80" alt="Background Image" class="w-full h-100 object-cover rounded-lg" >
+                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2850&q=80" alt="Background Image" class="w-full h-200 object-cover rounded-lg" >
                 </div>
                 <div class="lg:w-1/2 mt-6 lg:mt-0">
                     <div class="bg-white py-12 px-6 sm:py-16 sm:px-8 lg:px-10">
@@ -270,6 +270,9 @@
                             <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">49.9% increase</dd>
                         </div>
                         </dl>
+                        <center>
+                            <a href="contact.html" class="mt-12 inline-block bg-indigo-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 animate__animated animate__fadeInUp animate__delay-8s">View Services</a>
+                        </center>
                     </div>
                 </div>
             </div>
