--- a/index.html
+++ b/index.html
@@ -246,36 +246,37 @@
             </div> -->
         </div>
         </section>
-        <section style="background-color: #111827;margin-top: -100px;">
-            <div class="max-w-7xl mx-auto p-6 lg:flex lg:items-center">
+        <section style="background-color: #111827;margin-top: -100px;padding-top: 50px;">
+            <div class="max-w-7xl mx-auto p-8 lg:flex lg:items-center">
                 <div class="lg:w-1/2">
-                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2850&q=80" alt="Background Image" class="w-full h-200 object-cover rounded-lg" >
+                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2850&q=80" alt="Background Image" class="w-xl h-100 object-cover sm:rounded-tl-lg sm:rounded-lg lg:rounded-none lg:rounded-tl-lg lg:rounded-bl-lg" >
                 </div>
                 <div class="lg:w-1/2 mt-6 lg:mt-0">
-                    <div class="bg-white py-12 px-6 sm:py-16 sm:px-8 lg:px-10">
+                    <div class="bg-white py-4 px-6 sm:py-16 sm:px-8 lg:px-16 sm:rounded-xl lg:rounded-none lg:rounded-tr-lg lg:rounded-br-lg">
                         <h2 class="text-3xl font-bold text-gray-900 mb-4">Current track record</h2>
-                        <p class="text-lg text-gray-600 mb-6">"We've Got it under control"</p>
+                        <p class="text-lg text-gray-600 mb-6">"We've Got you Covered Partner* !!"</p>
                         <p class="text-base text-gray-500 mb-8">Utilize our knowledge to your benefit providing it support and Advice to Initiatives that have the Potential to go to Market, Gain guidance from Active Entrepreneurs and more.</p>
-                        <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center sm:grid-cols-2 lg:grid-cols-3">
+                        <dl class="grid grid-cols-1 gap-x-8 gap-y-12 text-center sm:grid-cols-2 lg:grid-cols-3">
                         <div class="mx-auto flex max-w-xs flex-col gap-y-4">
                             <dt class="text-base leading-7 text-gray-600">Incubated Projects</dt>
-                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">3 completed</dd>
+                            <dd class="order-first text-2xl font-semibold tracking-tight text-gray-900 sm:text-3xl">3 Completed</dd>
                         </div>
                         <div class="mx-auto flex max-w-xs flex-col gap-y-4">
                             <dt class="text-base leading-7 text-gray-600">In The Wait-List</dt>
-                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">13 applicant</dd>
+                            <dd class="order-first text-2xl font-semibold tracking-tight text-gray-900 sm:text-3xl">13 Applicants</dd>
                         </div>
                         <div class="mx-auto flex max-w-xs flex-col gap-y-4">
                             <dt class="text-base leading-7 text-gray-600">In Business Success</dt>
-                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">49.9% increase</dd>
+                            <dd class="order-first text-2xl font-semibold tracking-tight text-gray-900 sm:text-3xl">49.9% Increase</dd>
                         </div>
                         </dl>
-                        <center>
-                            <a href="contact.html" class="mt-12 inline-block bg-indigo-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 animate__animated animate__fadeInUp animate__delay-8s">View Services</a>
-                        </center>
                     </div>
                 </div>
+                <br>
             </div>
+            <center>
+                <a href="contact.html" class="mt-12 inline-block bg-indigo-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 animate__animated animate__fadeInUp animate__delay-8s">View Services</a>
+            </center>
     </section>
 
     <footer class="bg-gray-900 text-gray-400 py-8">
