--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
         <section style="background-color: #111827;margin-top: -100px;padding-top: 50px;">
             <div class="max-w-7xl mx-auto p-8 lg:flex lg:items-center">
                 <div class="lg:w-1/2">
-                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2850&q=80" alt="Background Image" class="w-xl h-100 object-cover sm:rounded-tl-lg sm:rounded-lg lg:rounded-none lg:rounded-tl-lg lg:rounded-bl-lg" >
+                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2850&q=80" alt="Background Image" class="w-xl h-100 object-cover rounded-lg lg:rounded-none lg:rounded-tl-lg lg:rounded-bl-lg" >
                 </div>
                 <div class="lg:w-1/2 mt-6 lg:mt-0">
-                    <div class="bg-white py-4 px-6 sm:py-16 sm:px-8 lg:px-16 sm:rounded-xl lg:rounded-none lg:rounded-tr-lg lg:rounded-br-lg">
+                    <div class="bg-white py-4 px-6 sm:py-16 sm:px-8 lg:px-16 rounded-lg lg:rounded-none lg:rounded-tr-lg lg:rounded-br-lg">
                         <h2 class="text-3xl font-bold text-gray-900 mb-4">Current track record</h2>
                         <p class="text-lg text-gray-600 mb-6">"We've Got you Covered Partner* !!"</p>
                         <p class="text-base text-gray-500 mb-8">Utilize our knowledge to your benefit providing it support and Advice to Initiatives that have the Potential to go to Market, Gain guidance from Active Entrepreneurs and more.</p>
