"Update 404.html: change button text, update paragraph text, and modify redirect URL in goHome function"

--- a/404.html
+++ b/404.html
@@ -72,10 +72,10 @@
     </p>
     
     <button onclick="goHome()" class="px-6 py-3 bg-indigo-600 text-white rounded-full hover:bg-indigo-700 transition duration-300 ease-in-out">
-      🚀 Beam me back to safety!
+      🚀 Back To Landing Page!
     </button>
 
-    <p class="text-gray-500 text-sm mt-4">Or, try the Konami Code if you’re feeling adventurous. 😉</p>
+    <p class="text-gray-500 text-sm mt-4">If Something wrong accrued please contact contact@i-startup.tn 😉</p>
     <!-- Background Vectors -->
     <div class="absolute top-0 left-0 w-40 h-40 bg-indigo-600 rounded-full opacity-20 rotate-animation"></div>
     <div class="absolute bottom-0 right-0 w-50 h-50 rounded-full"><img src="https://2392094.fs1.hubspotusercontent-na1.net/hub/2392094/hubfs/talent_profile.png?width=150&height=150&name=talent_profile.png" alt=""></div>
@@ -85,7 +85,7 @@
   <script>
     // JavaScript to redirect back to homepage
     function goHome() {
-      window.location.href = '/index.html'; // Adjust this to your homepage URL
+      window.location.href = 'https://i-startup.tn'; // Adjust this to your homepage URL
     }
   </script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
