--- a/application.html
+++ b/application.html
@@ -79,7 +79,7 @@
     
 
     <!-- Application Section -->
-    <section id="application" class="py-24 bg-white text-center pt-32">
+    <section id="application" class="py-24 bg-white text-center pt-32 sm:px-0 lg:px-52 ">
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold mb-10 animate__animated animate__fadeInUp">Ready to Transform Your Startup?</h2>
             <p class="text-lg text-gray-600 mb-10 animate__animated animate__fadeInUp animate__delay-0.25s">
