--- a/programs.html
+++ b/programs.html
@@ -90,7 +90,7 @@
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold mb-10 animate__animated animate__fadeInUp">Our Programs</h2>
 
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 lg:px-20 ">
                 <!-- Incubation Program -->
                 <div class="p-8 bg-white rounded-lg shadow-lg">
                     <h3 class="text-2xl font-semibold mb-6 text-gray-800">Incubation Program</h3>
