--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
     
 
     <!-- Services Section -->
-    <section id="services" class="py-24 bg-white text-center pt-32">
+    <section id="services" class="py-24 bg-white text-center pt-32 sm:px-0 lg:px-52 ">
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold mb-10 animate__animated animate__fadeInUp">Our Services</h2>
             <br>
