--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <br>
                 <div class="container mx-auto px-4 py-12">
                     <div class="flex flex-wrap md:flex-nowrap items-center mb-16">
-                        <div class="md:w-1/2 w-full md:pr-12 mb-8 md:mb-0 animate__animated animate__fadeInLeft">
+                        <div class="md:w-1/2 w-full md:pr-12 mb-8 md:mb-0 animate__fadeInLeft animate-on-scroll animate__delay-2s">
                             <h1 class="text-3xl font-bold mb-6 text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 to-blue-600">
                                 The Journey of Startups
                             </h1>
@@ -128,16 +128,16 @@
                                 The path from an idea to a successful business involves various stages, including ideation, validation, MVP development, scaling, and expansion. A crucial element for startups is the ability to adapt quickly to changing market conditions and customer needs.
                             </p>
                         </div>
-                        <div class="md:w-1/2 w-full animate__animated animate__fadeInRight">
-                            <img src="Assets/meninsuite.gif" alt="Startup Journey" class="w-full h-auto rounded-lg shadow-xl transform transition-transform duration-300 ">
+                        <div class="md:w-1/2 w-ful animate__animated animate__fadeInRight">
+                            <img src="Assets/meninsuite.gif" alt="Startup Journey" class="w-full h-auto rounded-lg shadow-xl transform transition-transform duration-500 animate-on-scroll">
                         </div>
                     </div>
                 <br>
                     <div class="flex flex-wrap md:flex-nowrap items-center">
-                        <div class="md:w-1/2 w-full md:pr-12 mb-8 md:mb-0 animate__animated animate__fadeInLeft animate__delay-1s">
+                        <div class="md:w-1/2 w-full md:pr-12 mb-8 md:mb-0 animate__animated animate__fadeInLeft animate__delay-3s">
                             <img src="https://startup.gov.tn/sites/default/files/brand/StartupTunisia-Logo-Small-01.png" alt="Startups in Tunisia" class="w-full h-auto rounded-lg shadow-xl transform transition-transform duration-300 ">
                         </div>
-                        <div class="md:w-1/2 w-full animate__animated animate__fadeInRight animate__delay-1s">
+                        <div class="md:w-1/2 w-full animate__animated animate__fadeInRight animate-on-scroll">
                             <h1 class="text-3xl font-bold mb-6 text-transparent bg-clip-text bg-gradient-to-r from-blue-500 to-red-600">
                                 Startups in Tunisia
                             </h1>
@@ -258,15 +258,15 @@
                         <p class="text-lg text-gray-600 mb-6">"We've Got you Covered Partner* !!"</p>
                         <p class="text-base text-gray-500 mb-8">Utilize our knowledge to your benefit providing it support and Advice to Initiatives that have the Potential to go to Market, Gain guidance from Active Entrepreneurs and more.</p>
                         <dl class="grid grid-cols-1 gap-x-8 gap-y-12 text-center sm:grid-cols-2 lg:grid-cols-3">
-                        <div class="mx-auto flex max-w-xs flex-col gap-y-4">
+                        <div class="mx-auto flex max-w-xs flex-col gap-y-4 animate-on-scroll">
                             <dt class="text-base leading-7 text-gray-600">Incubated Projects</dt>
                             <dd class="order-first text-2xl font-semibold tracking-tight text-gray-900 sm:text-3xl">3 Completed</dd>
                         </div>
-                        <div class="mx-auto flex max-w-xs flex-col gap-y-4">
+                        <div class="mx-auto flex max-w-xs flex-col gap-y-4 animate-on-scroll">
                             <dt class="text-base leading-7 text-gray-600">In The Wait-List</dt>
                             <dd class="order-first text-2xl font-semibold tracking-tight text-gray-900 sm:text-3xl">13 Applicants</dd>
                         </div>
-                        <div class="mx-auto flex max-w-xs flex-col gap-y-4">
+                        <div class="mx-auto flex max-w-xs flex-col gap-y-4 animate-on-scroll animate-bounce -backdrop-hue-rotate-15">
                             <dt class="text-base leading-7 text-gray-600">In Business Success</dt>
                             <dd class="order-first text-2xl font-semibold tracking-tight text-gray-900 sm:text-3xl">49.9% Increase</dd>
                         </div>
