`Update success stories in success-stories.html with new logos and descriptions`

--- a/success-stories.html
+++ b/success-stories.html
@@ -90,7 +90,7 @@
             <div class="bg-gray-100 p-6 mb-12 rounded-lg shadow-md animate__animated animate__fadeInUp">
                 <div class="flex items-center justify-between mb-6">
                     <h3 class="text-2xl font-semibold text-indigo-600">LingoLand</h3>
-                    <img src="https://lingo-land.net/1.png" alt="lingo-logo" class="h-12 w-12 rounded-full">
+                    <img src="https://lingo-land.net/assets/img/logo.png" alt="lingo-logo" class="h-12 w-12 rounded-full">
                 </div>
                 <p class="text-lg text-gray-600 mb-4"><strong>Challenge:</strong> Lack of technical team.</p>
                 <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> IT support and personal team.</p>
@@ -100,8 +100,17 @@
             <!-- Success Story 2 -->
             <div class="bg-gray-100 p-6 mb-12 rounded-lg shadow-md animate__animated animate__fadeInUp animate__delay-1s">
                 <div class="flex items-center justify-between mb-6">
-                    <h3 class="text-2xl font-semibold text-indigo-600">Startup 2</h3>
-                    <img src="startup2-logo.png" alt="Startup 2 Logo" class="h-12 w-12 rounded-full">
+                    <h3 class="text-2xl font-semibold text-indigo-600">Geniup</h3>
+                    <img src="startup2-logo.png" alt="GeniUP" class="h-12 w-12 rounded-full">
+                </div>
+                <p class="text-lg text-gray-600 mb-4"><strong>Challenge:</strong> Struggled with product-market fit.</p>
+                <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> Business Guidance Experience (BGE) and mentorship.</p>
+                <p class="text-lg text-gray-600 mb-4"><strong>Outcome:</strong> Achieved product-market fit and rapid growth.</p>
+            </div>
+            <div class="bg-gray-100 p-6 mb-12 rounded-lg shadow-md animate__animated animate__fadeInUp animate__delay-1s">
+                <div class="flex items-center justify-between mb-6">
+                    <h3 class="text-2xl font-semibold text-indigo-600">TotalConnect</h3>
+                    <img style="background-color: black;" src="https://totalkonnect.github.io/Main/Assets/150.png" alt="TotalConnect" class="h-12 w-12 rounded-full">
                 </div>
                 <p class="text-lg text-gray-600 mb-4"><strong>Challenge:</strong> Struggled with product-market fit.</p>
                 <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> Business Guidance Experience (BGE) and mentorship.</p>
