`Update success-stories.html with new content for TotalConnect`

--- a/success-stories.html
+++ b/success-stories.html
@@ -112,10 +112,11 @@
                     <h3 class="text-2xl font-semibold text-indigo-600">TotalConnect</h3>
                     <img style="background-color: black;" src="https://totalkonnect.github.io/Main/Assets/150.png" alt="TotalConnect" class="h-12 w-12 rounded-full">
                 </div>
-                <p class="text-lg text-gray-600 mb-4"><strong>Challenge:</strong> Struggled with product-market fit.</p>
-                <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> Business Guidance Experience (BGE) and mentorship.</p>
-                <p class="text-lg text-gray-600 mb-4"><strong>Outcome:</strong> Achieved product-market fit and rapid growth.</p>
+                <p class="text-lg text-gray-600 mb-4"><strong>Challenge:</strong> Struggled to develop a website, attract investors, and reach the target audience.</p>
+                <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> Received Business Guidance Experience (BGE) and mentorship to overcome challenges.</p>
+                <p class="text-lg text-gray-600 mb-4"><strong>Outcome:</strong> Successfully developed their website, secured investors, and reached their audience.</p>
             </div>
+            
 
             <!-- CTA Button -->
             <a href="application.html" class="mt-12 inline-block bg-indigo-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 animate__animated animate__fadeInUp animate__delay-2s">Join Us</a>
