--- a/success-stories.html
+++ b/success-stories.html
@@ -90,7 +90,7 @@
             <div class="bg-gray-100 p-6 mb-12 rounded-lg shadow-md animate__animated animate__fadeInUp">
                 <div class="flex items-center justify-between mb-6">
                     <h3 class="text-2xl font-semibold text-indigo-600">LingoLand</h3>
-                    <img src="https://lingo-land.net/assets/img/logo.png" alt="lingo-logo" class="h-12 w-12 rounded-full">
+                    <img src="https://lingo-land.net/assets/img/circle.png" alt="lingo-logo" class="h-12 w-12 rounded-full">
                 </div>
                 <p class="text-lg text-gray-600 mb-4"><strong>Challenge:</strong> Lack of technical team.</p>
                 <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> IT support and personal team.</p>
