Update logos for Geniup and TotalConnect in success-stories.html

--- a/success-stories.html
+++ b/success-stories.html
@@ -101,7 +101,7 @@
             <div class="bg-gray-100 p-6 mb-12 rounded-lg shadow-md animate__animated animate__fadeInUp animate__delay-1s">
                 <div class="flex items-center justify-between mb-6">
                     <h3 class="text-2xl font-semibold text-indigo-600">Geniup</h3>
-                    <img src="startup2-logo.png" alt="GeniUP" class="h-12 w-12 rounded-full">
+                    <img src="https://geniup.netlify.app/assets/images/GeniUp.png" alt="GeniUP" class="h-12 w-12 rounded-full">
                 </div>
                 <p class="text-lg text-gray-600 mb-4"><strong>Challenge:</strong> Struggled with product-market fit.</p>
                 <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> Business Guidance Experience (BGE) and mentorship.</p>
@@ -110,7 +110,7 @@
             <div class="bg-gray-100 p-6 mb-12 rounded-lg shadow-md animate__animated animate__fadeInUp animate__delay-1s">
                 <div class="flex items-center justify-between mb-6">
                     <h3 class="text-2xl font-semibold text-indigo-600">TotalConnect</h3>
-                    <img style="background-color: black;" src="https://totalkonnect.github.io/Main/Assets/150.png" alt="TotalConnect" class="h-12 w-12 rounded-full">
+                    <img style="background-color: black;" src="https://tc-card.github.io/Main/Assets/150.png" alt="TotalConnect" class="h-12 w-12 rounded-full">
                 </div>
                 <p class="text-lg text-gray-600 mb-4"><strong>Challenge:</strong> Struggled to develop a website, attract investors, and reach the target audience.</p>
                 <p class="text-lg text-gray-600 mb-4"><strong>Solution:</strong> Received Business Guidance Experience (BGE) and mentorship to overcome challenges.</p>
