Update programs.html layout and content for improved presentation and user engagement

--- a/programs.html
+++ b/programs.html
@@ -88,41 +88,58 @@
     <!-- Program Overview Section -->
     <section id="programs"  class="py-24 bg-white text-center pt-32">
         <div class="container mx-auto px-6">
-            <h2 class="text-4xl font-bold mb-10 animate__animated animate__fadeInUp">Our Programs</h2>
+            <h2 class="text-4xl font-bold mb-10 animate__animated animate__fadeInUp text-gray-800">Our Programs</h2>
 
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 lg:px-20 ">
-                <!-- Incubation Program -->
-                <div class="p-8 bg-white rounded-lg shadow-lg">
-                    <h3 class="text-2xl font-semibold mb-6 text-gray-800">Incubation Program</h3>
-                    <p class="text-lg text-gray-600 mb-6">From idea to prototype – we help startups build a functional MVP with a dedicated IT team.</p>
-                    <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
-                        <li>MVP Development – Build a functional prototype.</li>
-                        <li>Business Guidance Experience (BGE) – Validate ideas and refine models.</li>
-                        <li>Technical Resources – Dedicated IT team.</li>
-                        <li>Initial Funding Opportunities – Seed funding options.</li>
-                    </ul>
-                    <center>
-                        <img src="https://startuptn.in/images/fill-application.png" class="px-6 py-3" alt="">
-                    </center>
-                    <a href="application.html" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-blue-700 transition duration-200">Apply Now</a>
-                </div>
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 lg:px-12">
+            <!-- Incubation Program -->
+            <div class="p-8 bg-white rounded-xl shadow-xl hover:shadow-2xl transition-shadow duration-300 transform hover:-translate-y-1">
+                <h3 class="text-2xl font-semibold mb-6 text-gray-800">Incubation Program</h3>
+                <p class="text-lg text-gray-600 mb-6">From idea to prototype – we help startups build a functional MVP with a dedicated IT team.</p>
+                <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
+                <li>MVP Development – Build a functional prototype.</li>
+                <li>Business Guidance Experience (BGE) – Validate ideas and refine models.</li>
+                <li>Technical Resources – Dedicated IT team.</li>
+                <li>Initial Funding Opportunities – Seed funding options.</li>
+                </ul>
+                <center>
+                <img src="https://startuptn.in/images/fill-application.png" class="px-6 py-3 w-30 h-auto" alt="">
+                </center>
+                <a href="application.html" class="inline-block bg-blue-600 text-white px-8 py-3 rounded-lg shadow-lg hover:bg-blue-700 transition duration-300 mt-4">Apply Now</a>
+            </div>
 
-                <!-- Acceleration Program -->
-                <div class="p-8 bg-white rounded-lg shadow-lg animate__animated animate__fadeInUp">
-                    <h3 class="text-2xl font-semibold mb-6 text-gray-800">Acceleration Program</h3>
-                    <p class="text-lg text-gray-600 mb-6">After MVP, we help startups scale with dedicated support, global market access, and investment preparation.</p>
-                    <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
-                        <li>Growth Strategies – Scale with dedicated IT support.</li>
-                        <li>Global Market Access – Reach international markets.</li>
-                        <li>Investment Readiness – Preparing your business for growth.</li>
-                        <li>Demo Day – Present to investors and partners.</li>
-                    </ul>
-                    <center>
-                        <img src="https://startuptn.in/images/racket-img.png" class="px-6 py-3" alt="">
-                    </center>
-                    <a href="accelerationapp.html" class="inline-block bg-green-600 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-green-700 transition duration-200">Join the Acceleration Program</a>
-                </div>
+            <!-- Acceleration Program -->
+            <div class="p-8 bg-white rounded-xl shadow-xl hover:shadow-2xl transition-shadow duration-300 transform hover:-translate-y-1 animate__animated animate__fadeInUp">
+                <h3 class="text-2xl font-semibold mb-6 text-gray-800">Acceleration Program</h3>
+                <p class="text-lg text-gray-600 mb-6">Ready to take your startup to the next level? We're here to help you grow with personalized support and guidance every step of the way.</p>
+                <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
+                <li>Tailored Growth Strategy - Your unique path to success</li>
+                <li>Market Expansion - We'll help you reach new horizons</li>
+                <li>Investment Preparation - Get ready for your next big move</li>
+                <li>One-on-One Counseling - Personal guidance from our experts</li>
+                </ul>
+                <center>
+                <img src="https://startuptn.in/images/racket-img.png" class="px-6 py-3 w-30 h-auto" alt="">
+                </center>
+                <a href="accelerationapp.html" class="inline-block bg-green-600 text-white px-8 py-3 rounded-lg shadow-lg hover:bg-green-700 transition duration-300 mt-4">Join Our Acceleration Family</a>
+            </div>
 
+            <!-- CO-Work Program -->
+            <div class="p-8 bg-white rounded-xl shadow-xl hover:shadow-2xl transition-shadow duration-300 transform hover:-translate-y-1 animate__animated animate__fadeInUp">
+                <h3 class="text-2xl font-semibold mb-6 text-gray-800">CO-Work Program</h3>
+                <p class="text-lg text-gray-600 mb-6">For coworking spaces seeking comprehensive digital solutions: custom web applications, management hubs, and websites with automated systems to enhance your workspace experience.</p>
+                <ul class="list-disc text-left text-gray-600 space-y-3 mb-8 pl-6">
+                <li>Web Development – Custom websites and web applications</li>
+                <li>Space Management – Automated booking and scheduling systems</li>
+                <li>Customer Portal – Secure member data and management</li>
+                <li>Analytics Dashboard – Track check-in's and other to generate smart discounts</li>
+                </ul>
+                <center>
+                <svg class="w-10 h-10" fill="none" stroke="blue" viewBox="0 0 25 25" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"/>
+                </svg>
+                </center>
+                <a href="https://co-work.i-startup.tn" class="inline-block bg-yellow-600 text-white px-8 py-3 rounded-lg shadow-lg hover:bg-yellow-700 transition duration-300 mt-4">Join the CO-Work Program</a>
+            </div>
             </div>
         </div>
     </section>
